--- a/CommonRes/src/main/res/values/colors.xml
+++ b/CommonRes/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="public_colorPrimary">#37889F</color>
-    <color name="public_colorPrimaryDark">#37889F</color>
-    <color name="public_colorAccent">#FF4081</color>
+    <color name="public_colorPrimary">#7c63e7</color>
+    <color name="public_colorPrimaryDark">#000000</color>
+    <color name="public_colorAccent">#7c63e7</color>
+
+    <color name="public_toolbar_color">#7c63e7</color>        <!--actionBar的背景颜色-->
+
     <color name="public_white">#FFFFFF</color>
     <color name="public_black">#000000</color>
     <color name="public_color_transparent">#00000000</color>
