--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
     <style name="SplashTheme" parent="public_AppTheme">
-        <item name="android:windowBackground">@drawable/layer_splash_bg</item>
-        <item name="colorPrimaryDark">@android:color/black</item>
         <item name="android:windowIsTranslucent">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
