--- a/module_home/src/main/res/layout/activity_map.xml
+++ b/module_home/src/main/res/layout/activity_map.xml
@@ -3,6 +3,23 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              xmlns:joker="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              tools:ignore="ResourceName">
+
+    <com.example.commonres.view.CommonToolBar
+            android:layout_width="match_parent"
+            android:layout_height="?android:actionBarSize"
+            joker:title="位置信息"
+            joker:backVisible="true">
+    </com.example.commonres.view.CommonToolBar>
+
+
+
+    <com.baidu.mapapi.map.MapView
+            android:id="@+id/mapview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"/>
 
 </LinearLayout>
