--- a/CommonRes/src/main/res/values/colors.xml
+++ b/CommonRes/src/main/res/values/colors.xml
@@ -66,6 +66,9 @@
     <color name="public_un_press_color">#9C27B0</color>
     <color name="public_gray">#cccccc</color>
 
+    <color name="public_price_selected">#7D63E8</color>
+    <color name="public_price_unselected">#fffefe</color>
+
 
 
     <color name="public_white">#FFFFFF</color>
