--- a/module_home/src/main/res/layout/activity_comment.xml
+++ b/module_home/src/main/res/layout/activity_comment.xml
@@ -1,8 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:joker="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    tools:ignore="ResourceName">
+
+    <com.example.commonres.view.CommonToolBar
+        android:layout_width="match_parent"
+        android:layout_height="?android:actionBarSize"
+        joker:backVisible="true"
+        joker:title="评论">
+    </com.example.commonres.view.CommonToolBar>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/comment_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
