--- a/module_home/src/main/res/layout/find_recyclerview_item.xml
+++ b/module_home/src/main/res/layout/find_recyclerview_item.xml
@@ -114,6 +114,13 @@
                             android:textColor="@color/public_money_color"
                             android:textSize="8pt"/>
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="/日"
+                        android:textColor="@color/public_money_color"
+                        android:textSize="8pt"/>
+
                 </LinearLayout>
 
             </LinearLayout>
