--- a/CommonRes/src/main/res/layout/public_tips_dialog.xml
+++ b/CommonRes/src/main/res/layout/public_tips_dialog.xml
@@ -6,8 +6,6 @@
         android:layout_width="wrap_content"
         android:background="@drawable/public_tips_dialog_shape"
         android:layout_gravity="center"
-        android:paddingLeft="@dimen/public_15_0dp"
-        android:paddingRight="@dimen/public_15_0dp"
         android:layout_marginLeft="@dimen/public_5_0dp"
         android:layout_marginRight="@dimen/public_5_0dp">
 
@@ -18,20 +16,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/public_10_0dp"
-            android:paddingBottom="@dimen/public_4_0dp"
+            android:paddingBottom="@dimen/public_10_0dp"
             android:text="?attr/TipsTitleText"
-            android:textSize="@dimen/public_font_20sp"/>
+            android:textSize="@dimen/public_font_22sp"/>
 
     <TextView
             android:id="@+id/tipsContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingTop="@dimen/public_4_0dp"
-            android:paddingBottom="@dimen/public_4_0dp"
+            android:paddingBottom="@dimen/public_10_0dp"
             android:text="?attr/TipsContent"
             android:textColor="@color/public_black"
-            android:textSize="@dimen/public_font_14sp"/>
+            android:textSize="@dimen/public_font_16sp"/>
 
     <View
             android:layout_width="match_parent"
@@ -49,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:background="@color/public_white"
+                android:background="@drawable/public_tips_dialog_button_left_selector"
                 android:text="取消"
                 android:textSize="@dimen/public_font_16sp"/>
 
@@ -64,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:background="@color/public_white"
+                android:background="@drawable/public_tips_dialog_button_right_selector"
                 android:text="确定"
                 android:textColor="@color/public_colorAccent"
                 android:textSize="@dimen/public_font_16sp"/>
