--- a/module_home/src/main/res/layout/activity_order_detail.xml
+++ b/module_home/src/main/res/layout/activity_order_detail.xml
@@ -149,6 +149,7 @@
                 android:layout_weight="1"/>
 
         <LinearLayout
+                android:id="@+id/chat_with_owner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="30dp"
@@ -169,6 +170,7 @@
 
 
         <LinearLayout
+                android:id="@+id/connect_owner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="30dp"
@@ -441,8 +443,7 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="@dimen/public_10_0dp"
+            android:paddingTop="@dimen/public_10_0dp"
             android:background="@color/white"
             android:gravity="center_vertical"
             android:paddingLeft="20dp"
@@ -490,13 +491,17 @@
                 android:id="@+id/bt_order_detail_pay"
                 android:layout_width="150dp"
                 android:layout_marginRight="@dimen/public_10_0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@drawable/button_common_selector"
                 android:text="付款"
                 android:textSize="10pt"
                 android:textColor="@color/white"/>
-
     </LinearLayout>
+
+    <View
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/public_10_0dp"></View>
 
 
 </LinearLayout>
