--- a/module_message/src/main/res/layout/fragment_message.xml
+++ b/module_message/src/main/res/layout/fragment_message.xml
@@ -13,9 +13,9 @@
             joker:title="@string/public_message_title">
     </com.example.commonres.view.CommonToolBar>
 
-    <TextView
-            android:id="@+id/module_message_textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="第二个fragment"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
