--- a/module_home/src/main/res/layout/find_recyclerview_item.xml
+++ b/module_home/src/main/res/layout/find_recyclerview_item.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="111dp"
+              android:layout_height="wrap_content"
               android:orientation="vertical"
+              android:background="@drawable/public_item_click_selected"
               tools:ignore="ResourceName">
 
     <LinearLayout
