--- a/module_order/src/main/res/layout/fragment_comment.xml
+++ b/module_order/src/main/res/layout/fragment_comment.xml
@@ -6,9 +6,9 @@
               android:orientation="vertical"
               tools:ignore="ResourceName">
 
-    <TextView
-            android:id="@+id/module_order_textview2"
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Comment"/>
+            android:layout_height="match_parent"/>
+
 </LinearLayout>
