--- a/module_order/src/main/res/layout/fragment_un_confirm.xml
+++ b/module_order/src/main/res/layout/fragment_un_confirm.xml
@@ -7,9 +7,10 @@
               tools:ignore="ResourceName">
 
 
-    <TextView
-            android:id="@+id/module_order_textview2"
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="待付款"/>
+            android:layout_height="match_parent"/>
+
+
 </LinearLayout>
