--- a/module_order/src/main/res/layout/order_un_confirm_item.xml
+++ b/module_order/src/main/res/layout/order_un_confirm_item.xml
@@ -11,8 +11,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
-            android:orientation="vertical"
-            android:showDividers="middle">
+            android:orientation="vertical">
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -94,62 +93,55 @@
             android:layout_height="@dimen/public_1_0dp"
             android:background="@color/public_gray"></View>
 
+
         <LinearLayout
-                android:id="@+id/order_detail"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="70dp"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="10dp">
+
+            <TextView
+                    android:id="@+id/tv_order_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:text="万达广场金帆精品酒店式公寓"
+                    android:textColor="#403d3d"
+                    android:textSize="16sp"/>
 
             <LinearLayout
-                    android:layout_width="330dp"
-                    android:layout_height="70dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:paddingLeft="10dp">
+                    android:orientation="horizontal">
 
                 <TextView
-                        android:id="@+id/tv_order_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:text="万达广场金帆精品酒店式公寓"
-                        android:textColor="#403d3d"
-                        android:textSize="16sp"/>
+                        android:text="入住："/>
 
-                <LinearLayout
-                        android:layout_width="match_parent"
+                <TextView
+                        android:id="@+id/tv_order_checkintime"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
+                        android:maxEms="5"
+                        android:maxLines="1"
+                        android:text="2018-04-03 12:00"/>
 
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="入住："/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="退房："/>
 
-                    <TextView
-                            android:id="@+id/tv_order_checkintime"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:maxEms="5"
-                            android:maxLines="1"
-                            android:text="2018-04-03 12:00"/>
-
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:text="退房："/>
-
-                    <TextView
-                            android:id="@+id/tv_order_checkouttime"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:maxEms="5"
-                            android:maxLines="1"
-                            android:text="2018-04-06 12:00"/>
-                </LinearLayout>
+                <TextView
+                        android:id="@+id/tv_order_checkouttime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxEms="5"
+                        android:maxLines="1"
+                        android:text="2018-04-06 12:00"/>
             </LinearLayout>
         </LinearLayout>
 
