--- a/module_home/src/main/res/layout/activity_hotel_selected_info.xml
+++ b/module_home/src/main/res/layout/activity_hotel_selected_info.xml
@@ -242,6 +242,8 @@
                 android:id="@+id/sv_detail"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:scrollbars="none"
+                android:overScrollMode="never"
                 android:layout_below="@+id/hotelmessage_RelativeLayout1">
 
             <LinearLayout
