--- a/module_home/src/main/res/layout/activity_find.xml
+++ b/module_home/src/main/res/layout/activity_find.xml
@@ -34,6 +34,8 @@
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
+            android:overScrollMode="never"
+            android:scrollbars="none"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
