--- a/module_order/src/main/res/layout/fragment_un_confirm.xml
+++ b/module_order/src/main/res/layout/fragment_un_confirm.xml
@@ -9,6 +9,8 @@
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
+            android:scrollbars="none"
+            android:overScrollMode="never"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
