--- a/module_order/src/main/res/layout/activity_publish_comment.xml
+++ b/module_order/src/main/res/layout/activity_publish_comment.xml
@@ -22,6 +22,7 @@
             android:background="@android:drawable/editbox_background_normal"
             android:enabled="true"
             android:gravity="top"
+            android:textCursorDrawable="@drawable/public_edit_text_cursor_shape"
             android:hint="请写下你的评论~"
             android:inputType="textMultiLine"
             android:maxLines="10"
